solved : the en_US variable holiday calculation.

--- a/README
+++ b/README
@@ -1,1 +1,12 @@
-Work in progress.
+First : Don't be confused by the project name.
+
+Originally planned to use for time related events, now it becomes more and more 
+a general purpose solution.
+
+To keep the scope, in the 'eventmatrix-example' project you will find demo 
+applications which use this bundle of classes for time related events.
+
+Best regards, Uli
+
+PS: Maybe somebody is in the mood to correct my misspellings. Thanks in advance!
+
