My co-worker 'Norbert Teage' as contributor added.

--- a/README
+++ b/README
@@ -18,5 +18,5 @@ The first demo is 'Freeday'. (Not completed yet. I'm working on.)
 
 Best regards, Uli
 
-PS: Maybe somebody is in the mood to correct my misspellings. Thanks in advance!
+PS: Maybe someone is in the mood to correct my misspellings. Thanks in advance!
 
